--- a/1.안드로이드 분석 도구/3. dexdump.ipynb
+++ b/1.안드로이드 분석 도구/3. dexdump.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "470729f1",
+   "id": "a3ed3fc2",
    "metadata": {},
    "source": [
     "# 개요\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f655d8ff",
+   "id": "9fd4c25b",
    "metadata": {},
    "source": [
     "# 설치"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5ec4317",
+   "id": "62bdbc0f",
    "metadata": {},
    "source": [
     "## apt\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bcbad59",
+   "id": "e50b37c8",
    "metadata": {},
    "source": [
     "## android sdk에서 추출\n",
@@ -42,10 +42,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29f06bd3",
+   "id": "6e59c932",
    "metadata": {},
    "source": [
     "# 사용법(api 추출)\n",
+    "\n",
+    "dexdump는 작성기준(23.01.12)으로 버전에 따라 사용법과 성능에 어느 정도 차이가 존재한다. 다만 dexdump의 버전을 확인하는 법을 필자는 모르기 때문에 dexdump로 작업하기 전, 충분한 결과파일 점검을 하기 바람.\n",
+    "\n",
     "## linux"
    ]
   },
@@ -56,7 +59,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "f19e3fc6",
+   "id": "121eac1d",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -64,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fda65788",
+   "id": "438b9892",
    "metadata": {},
    "source": [
     "## Window"
