--- a/2.특징정보/2.API.ipynb
+++ b/2.특징정보/2.API.ipynb
@@ -27,7 +27,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "52f7516c",
+   "id": "4f7d63c3",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -46,14 +46,30 @@
    "id": "b06a6a25",
    "metadata": {},
    "source": [
-    "## aapt 사용"
+    "## apktool 사용\n",
+    "\n",
+    "apktool로 apk를 디컴파일 후, smali 디렉토리 내부의 .smali 파일들을 모두 읽어 추출한다\n",
+    "\n",
+    "* 정확도 및 신뢰성은 높음\n",
+    "* 시간이 더럽게 오래걸림\n",
+    "* 극히 일부 smali는 읽히지 않는 현상 발견"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "94dc9d78",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70650cd7",
    "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d0606fa",
+   "metadata": {},
+   "source": [
+    "## dexdump 사용"
+   ]
   }
  ],
  "metadata": {
