--- a/5.머신러닝 기본프로젝트/2. 특징정보 추출.ipynb
+++ b/5.머신러닝 기본프로젝트/2. 특징정보 추출.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7e1e0a7c",
+   "id": "e63fa9d6",
    "metadata": {},
    "source": [
     "# 개요"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89afdd35",
+   "id": "a24ac227",
    "metadata": {},
    "source": [
     "* 특징정보를 뽑을 수 있는 aapt, dexdump 같은 툴을 사용하여 관련 정보를 추출하는 작업"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c992f5bf",
+   "id": "22260eb2",
    "metadata": {},
    "source": [
     "# 예시코드"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba4aa922",
+   "id": "c04b1c0b",
    "metadata": {},
    "source": [
     "예시코드에서는 Permission과 api 특징정보만 사용할 예정이다"
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0504465a",
+   "id": "4ddd62cc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-16T05:57:53.724891Z",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "74f68fa2",
+   "id": "019ea1c2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-16T06:03:23.625027Z",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16353460",
+   "id": "2590e633",
    "metadata": {},
    "source": [
     "permission"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b7d50037",
+   "id": "a7a2077f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-16T06:05:15.240939Z",
@@ -116,7 +116,7 @@
     }
    ],
    "source": [
-    "save_path = './benign/permission'\n",
+    "save_path = './benign/permission/'\n",
     "for apk_path in b_list:\n",
     "# for apk_path in tqdm(b_list):\n",
     "    apk = os.path.split(apk_path)[1]\n",
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "216344dd",
+   "id": "c630a842",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-16T06:05:39.329203Z",
@@ -146,7 +146,7 @@
     }
    ],
    "source": [
-    "save_path = './malware/permission'\n",
+    "save_path = './malware/permission/'\n",
     "for apk_path in m_list:\n",
     "# for apk_path in tqdm(m_list):\n",
     "    apk = os.path.split(apk_path)[1]\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d436a3db",
+   "id": "f8805748",
    "metadata": {},
    "source": [
     "api"
@@ -166,11 +166,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "603f1084",
+   "execution_count": 20,
+   "id": "5b9adfdb",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-01-16T06:05:50.875Z"
+     "end_time": "2023-01-16T06:14:52.207195Z",
+     "start_time": "2023-01-16T06:05:50.877618Z"
     }
    },
    "outputs": [
@@ -10674,13 +10675,35 @@
       "dexdump E 01-16 15:08:27 14714 14714 dex_file-inl.h:218] invalid stream - problem with parameter iterator in /mnt/f/Benign/APK/com.martinvillar.android.quranhindi_45C63D9D7BD9DDF2E6E7D6BA99C191FC.apk for method void androidx.appcompat.widget.ActionBarOverlayLayout$ˊ.<init>(android.content.Context, android.util.AttributeSet)\n",
       "dexdump E 01-16 15:08:27 14714 14714 dex_file-inl.h:218] invalid stream - problem with parameter iterator in /mnt/f/Benign/APK/com.martinvillar.android.quranhindi_45C63D9D7BD9DDF2E6E7D6BA99C191FC.apk for method void androidx.appcompat.widget.ActionBarOverlayLayout$ˊ.<init>(android.view.ViewGroup$LayoutParams)\n",
       "dexdump E 01-16 15:08:27 14714 14714 dex_file-inl.h:218] invalid stream - problem with parameter iterator in /mnt/f/Benign/APK/com.martinvillar.android.quranhindi_45C63D9D7BD9DDF2E6E7D6BA99C191FC.apk for method void o.ᐟ$if.<init>(o.ᐟ, android.content.Context, o.ᵕ, android.view.View)\n",
-      "dexdump E 01-16 15:08:27 14714 14714 dex_file-inl.h:218] invalid stream - problem with parameter iterator in /mnt/f/Benign/APK/com.martinvillar.android.quranhindi_45C63D9D7BD9DDF2E6E7D6BA99C191FC.apk for method void o.ᐟ$ˊ.<init>(o.ᐟ)\n",
-      "dexdump E 01-16 15:08:27 14714 14714 dex_file-inl.h:218] invalid stream - problem with parameter iterator in /mnt/f/Benign/APK/com.martinvillar.android.quranhindi_45C63D9D7BD9DDF2E6E7D6BA99C191FC.apk for method void o.ᐟ$ˋ.<init>(o.ᐟ, o.ᐟ$"
+      "dexdump E 01-16 15:08:27 14714 14714 dex_file-inl.h:218] invalid stream - problem with parameter iterator in /mnt/f/Benign/APK/com.martinvillar.android.quranhindi_45C63D9D7BD9DDF2E6E7D6BA99C191FC.apk for method void o.ᐟ$ˊ.<init>(o.ᐟ)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 18%|█▊        | 180/1000 [09:01<41:05,  3.01s/it]h:218] invalid stream - problem with parameter iterator in /mnt/f/Benign/APK/com.martinvillar.android.quranhindi_45C63D9D7BD9DDF2E6E7D6BA99C191FC.apk for method void o.ᐟ$ˋ.<init>(o.ᐟ, o.ᐟ$\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_547/2580558979.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0msave_txt_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msave_path\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mapk_name\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'.txt'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mterminal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf\"dexdump -d {apk_path} | grep invoke- | cut -d '}}' -f 2 | cut -d ' ' -f 2 > {save_txt_path}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msubprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mterminal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshell\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/lib/python3.8/subprocess.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(input, capture_output, timeout, check, *popenargs, **kwargs)\u001b[0m\n\u001b[1;32m    493\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mPopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mpopenargs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mprocess\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    494\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 495\u001b[0;31m             \u001b[0mstdout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommunicate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    496\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mTimeoutExpired\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mexc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    497\u001b[0m             \u001b[0mprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkill\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.8/subprocess.py\u001b[0m in \u001b[0;36mcommunicate\u001b[0;34m(self, input, timeout)\u001b[0m\n\u001b[1;32m   1018\u001b[0m                 \u001b[0mstderr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstderr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1019\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstderr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1020\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1021\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1022\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mtimeout\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.8/subprocess.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m   1081\u001b[0m             \u001b[0mendtime\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_time\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1082\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1083\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_wait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1084\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1085\u001b[0m             \u001b[0;31m# https://bugs.python.org/issue25942\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.8/subprocess.py\u001b[0m in \u001b[0;36m_wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m   1804\u001b[0m                         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreturncode\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1805\u001b[0m                             \u001b[0;32mbreak\u001b[0m  \u001b[0;31m# Another thread waited.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1806\u001b[0;31m                         \u001b[0;34m(\u001b[0m\u001b[0mpid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msts\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_try_wait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1807\u001b[0m                         \u001b[0;31m# Check the pid and loop as waitpid has been known to\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1808\u001b[0m                         \u001b[0;31m# return 0 even without WNOHANG in odd situations.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.8/subprocess.py\u001b[0m in \u001b[0;36m_try_wait\u001b[0;34m(self, wait_flags)\u001b[0m\n\u001b[1;32m   1762\u001b[0m             \u001b[0;34m\"\"\"All callers to this function MUST hold self._waitpid_lock.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1763\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1764\u001b[0;31m                 \u001b[0;34m(\u001b[0m\u001b[0mpid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msts\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwaitpid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwait_flags\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1765\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mChildProcessError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1766\u001b[0m                 \u001b[0;31m# This happens if SIGCLD is set to be ignored or waiting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "save_path = './benign/api'\n",
+    "save_path = './benign/api/'\n",
     "for apk_path in b_list:\n",
     "# for apk_path in tqdm(b_list):\n",
     "    apk = os.path.split(apk_path)[1]\n",
@@ -10693,15 +10716,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9b26aa8",
+   "id": "e9a57f33",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-01-16T06:06:07.486Z"
+     "end_time": "2023-01-16T06:14:52.211308Z",
+     "start_time": "2023-01-16T06:14:52.211295Z"
     }
    },
    "outputs": [],
    "source": [
-    "save_path = './malware/api'\n",
+    "save_path = './malware/api/'\n",
     "for apk_path in m_list:\n",
     "# for apk_path in tqdm(m_list):\n",
     "    apk = os.path.split(apk_path)[1]\n",
