--- a/5.머신러닝 기본프로젝트/1. 데이터 탐색 및 선별.ipynb
+++ b/5.머신러닝 기본프로젝트/1. 데이터 탐색 및 선별.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "225fe483",
+   "id": "b49dea00",
    "metadata": {},
    "source": [
     "# 개요"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b1af452",
+   "id": "077644c6",
    "metadata": {},
    "source": [
     "**데이터 탐색 및 선별을 하는 이유**\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6f66f64",
+   "id": "055138b8",
    "metadata": {},
    "source": [
     "# 예시 코드"
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "0d76c2b7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:49:25.707924Z",
-     "start_time": "2023-01-16T05:49:25.705273Z"
+     "end_time": "2023-01-16T06:40:59.173588Z",
+     "start_time": "2023-01-16T06:40:59.171435Z"
     }
    },
    "outputs": [],
@@ -43,12 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "178ebdc5",
+   "execution_count": 42,
+   "id": "71ea3665",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:49:25.837360Z",
-     "start_time": "2023-01-16T05:49:25.828894Z"
+     "end_time": "2023-01-16T06:48:36.744188Z",
+     "start_time": "2023-01-16T06:48:36.732459Z"
     }
    },
    "outputs": [],
@@ -69,12 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "8b2fd615",
+   "execution_count": 43,
+   "id": "489e9154",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:49:25.955963Z",
-     "start_time": "2023-01-16T05:49:25.952940Z"
+     "end_time": "2023-01-16T06:48:36.997160Z",
+     "start_time": "2023-01-16T06:48:36.993809Z"
     }
    },
    "outputs": [
@@ -84,7 +84,7 @@
        "(1099, 1096)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,12 +95,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "2ff0d684",
+   "execution_count": 44,
+   "id": "5b8024bb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:49:26.080225Z",
-     "start_time": "2023-01-16T05:49:26.077305Z"
+     "end_time": "2023-01-16T06:48:37.294063Z",
+     "start_time": "2023-01-16T06:48:37.291772Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "b_list.remove('/mnt/f/Benign/APK/com.tomcallvideio2020.videocallgame_A1D7F6AAF8643193354B43561CAFF148.apk')\n",
+    "b_list.remove('/mnt/f/Benign/APK/com.launcher.smart.abstractgirl.theme_04A8A4323BEAF2800A7529A3D1DC22AD.apk')\n",
+    "b_list.remove('/mnt/f/Benign/APK/com.wTRTErtugrulPtv_786_C0DEF05C2C7C614732814B80FAF13363.apk')\n",
+    "b_list.remove('/mnt/f/Benign/APK/com.ofss.fcdb.mobile.android.phone.boc.launcher_3B89B95BA231FCB73252CA321881E8BF.apk')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "1f00c188",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-16T06:48:38.782531Z",
+     "start_time": "2023-01-16T06:48:38.779416Z"
     }
    },
    "outputs": [],
@@ -113,12 +131,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "445506df",
+   "execution_count": 46,
+   "id": "33e51d9d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T06:16:22.127448Z",
-     "start_time": "2023-01-16T06:16:22.114418Z"
+     "end_time": "2023-01-16T06:48:39.025657Z",
+     "start_time": "2023-01-16T06:48:39.013929Z"
     }
    },
    "outputs": [],
@@ -131,8 +149,16 @@
     "with open('./benign/benign_list_1000.txt','w') as f:\n",
     "    f.writelines('\\n'.join(b_list))\n",
     "with open('./malware/malware_list_1000.txt','w') as f:\n",
-    "    f.writelines('\\n'.join(b_list))"
+    "    f.writelines('\\n'.join(m_list))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9718e025",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
