--- a/1.안드로이드 분석 도구/2. androguard.ipynb
+++ b/1.안드로이드 분석 도구/2. androguard.ipynb
@@ -13,6 +13,9 @@
     "* androguard의 클래스, 메소드 등의 코드를 직접 하나하나 뜯어보는 것을 추천\n",
     "* androguard 공식 문서에 함수의 용법, return type등 설명이 잘 되어있으니 자주 참고하기 바람\n",
     "\n",
+    "\n",
+    "* androguard가 공식적으로 api-level 29까지 지원하기 때문에 그 이상의 api level은 모두 29로 낮춰서 분석하는 경향이 있다. --작성기준(23.01.16)\n",
+    "\n",
     "git : https://github.com/androguard/androguard\n",
     "\n",
     "doc : https://androguard.readthedocs.io/en/latest/"
