--- a/5.머신러닝 기본프로젝트/1. 데이터 탐색 및 선별.ipynb
+++ b/5.머신러닝 기본프로젝트/1. 데이터 탐색 및 선별.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b49dea00",
+   "id": "db38ec81",
    "metadata": {},
    "source": [
     "# 개요"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "077644c6",
+   "id": "a418a0d6",
    "metadata": {},
    "source": [
     "**데이터 탐색 및 선별을 하는 이유**\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "055138b8",
+   "id": "55794ed8",
    "metadata": {},
    "source": [
     "# 예시 코드"
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
    "id": "0d76c2b7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T06:40:59.173588Z",
-     "start_time": "2023-01-16T06:40:59.171435Z"
+     "end_time": "2023-01-16T07:31:49.986392Z",
+     "start_time": "2023-01-16T07:31:49.983548Z"
     }
    },
    "outputs": [],
@@ -43,12 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "71ea3665",
+   "execution_count": 60,
+   "id": "4e6dd938",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T06:48:36.744188Z",
-     "start_time": "2023-01-16T06:48:36.732459Z"
+     "end_time": "2023-01-16T07:31:50.185807Z",
+     "start_time": "2023-01-16T07:31:50.176764Z"
     }
    },
    "outputs": [],
@@ -69,12 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "489e9154",
+   "execution_count": 61,
+   "id": "8cbf445e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T06:48:36.997160Z",
-     "start_time": "2023-01-16T06:48:36.993809Z"
+     "end_time": "2023-01-16T07:31:50.389852Z",
+     "start_time": "2023-01-16T07:31:50.386416Z"
     }
    },
    "outputs": [
@@ -84,7 +84,7 @@
        "(1099, 1096)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,12 +95,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "5b8024bb",
+   "execution_count": 62,
+   "id": "13afa64b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T06:48:37.294063Z",
-     "start_time": "2023-01-16T06:48:37.291772Z"
+     "end_time": "2023-01-16T07:31:50.608063Z",
+     "start_time": "2023-01-16T07:31:50.605416Z"
     }
    },
    "outputs": [],
@@ -108,17 +108,20 @@
     "b_list.remove('/mnt/f/Benign/APK/com.tomcallvideio2020.videocallgame_A1D7F6AAF8643193354B43561CAFF148.apk')\n",
     "b_list.remove('/mnt/f/Benign/APK/com.launcher.smart.abstractgirl.theme_04A8A4323BEAF2800A7529A3D1DC22AD.apk')\n",
     "b_list.remove('/mnt/f/Benign/APK/com.wTRTErtugrulPtv_786_C0DEF05C2C7C614732814B80FAF13363.apk')\n",
-    "b_list.remove('/mnt/f/Benign/APK/com.ofss.fcdb.mobile.android.phone.boc.launcher_3B89B95BA231FCB73252CA321881E8BF.apk')"
+    "b_list.remove('/mnt/f/Benign/APK/com.ofss.fcdb.mobile.android.phone.boc.launcher_3B89B95BA231FCB73252CA321881E8BF.apk')\n",
+    "b_list.remove('/mnt/f/Benign/APK/com.martinvillar.android.quranhindi_45C63D9D7BD9DDF2E6E7D6BA99C191FC.apk')\n",
+    "b_list.remove('/mnt/f/Benign/APK/com.martinvillar.android.quranbangla_39622D416F4E9C8173C1CEE09AE479F9.apk')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "1f00c188",
+   "execution_count": 63,
+   "id": "35960a6e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T06:48:38.782531Z",
-     "start_time": "2023-01-16T06:48:38.779416Z"
+     "end_time": "2023-01-16T07:31:51.949525Z",
+     "start_time": "2023-01-16T07:31:51.946606Z"
     }
    },
    "outputs": [],
@@ -131,12 +134,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "33e51d9d",
+   "execution_count": 64,
+   "id": "9ac867bd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T06:48:39.025657Z",
-     "start_time": "2023-01-16T06:48:39.013929Z"
+     "end_time": "2023-01-16T07:31:52.288771Z",
+     "start_time": "2023-01-16T07:31:52.277467Z"
     }
    },
    "outputs": [],
@@ -155,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9718e025",
+   "id": "25bf431f",
    "metadata": {},
    "outputs": [],
    "source": []
