--- a/5.머신러닝 기본프로젝트/3. 벡터테이블 생성.ipynb
+++ b/5.머신러닝 기본프로젝트/3. 벡터테이블 생성.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5cb5aa98",
+   "id": "d67e13c9",
    "metadata": {},
    "source": [
     "# 개요"
@@ -15,20 +15,251 @@
     }
    },
    "cell_type": "markdown",
-   "id": "52248239",
+   "id": "078e40bc",
    "metadata": {},
    "source": [
     "* 추출한 특징정보를 기준에 따라 벡터테이블로 변환하는 작업\n",
+    "* 벡터테이블에 permission은 존재여부, api는 빈도를 작성한다\n",
+    "* 데이터에 노이즈가 있는 경우 노이즈 제거가 필요하다\n",
+    "\n",
     "![image.png](attachment:image.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aaf6607a",
+   "metadata": {},
+   "source": [
+    "# 코드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "d2f67d1a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-16T08:52:04.913132Z",
+     "start_time": "2023-01-16T08:52:04.902201Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import os, csv\n",
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "32154e95",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-16T08:36:58.138271Z",
+     "start_time": "2023-01-16T08:36:58.135734Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "if not os.path.isdir('./benign/csv'):\n",
+    "    os.mkdir('./benign/csv')\n",
+    "if not os.path.isdir('./malware/csv'):\n",
+    "    os.mkdir('./malware/csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "bfcdfd33",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-16T08:36:58.378099Z",
+     "start_time": "2023-01-16T08:36:58.374835Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with open('./data/1848_api.txt') as f:\n",
+    "    api_1848 = f.read().split('\\n')\n",
+    "with open('./data/474_perm.txt') as f:\n",
+    "    perm_474 = f.read().split('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "bc169848",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-16T08:36:58.641946Z",
+     "start_time": "2023-01-16T08:36:58.639066Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "perm_dict=dict((p,i) for i, p in enumerate(perm_474))\n",
+    "api_dict=dict((a,i) for i, a in enumerate(api_1848))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e147f8d",
+   "metadata": {},
+   "source": [
+    "permission vector table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "25dbfefe",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-16T08:36:59.515960Z",
+     "start_time": "2023-01-16T08:36:59.352107Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "perm_vector_table = []\n",
+    "for file in os.listdir('./benign/permission/'):\n",
+    "    perm_list = [0]*474\n",
+    "    with open(f'./benign/permission/{file}', 'r') as f:\n",
+    "        apk=f.read().split('\\n')[1:-1]\n",
+    "    \n",
+    "    for line in apk:\n",
+    "        # 노이즈 제거\n",
+    "        if \"'\" in line:\n",
+    "            perm = line.split(\"'\")[1]\n",
+    "        elif 'name=' in line:\n",
+    "            perm = line.split(\"name=\")[1]\n",
+    "        else:\n",
+    "            perm = line.split()[1]\n",
+    "        # 벡터테이블 생성\n",
+    "        if perm in perm_474:\n",
+    "            perm_list[perm_dict[perm]]=1\n",
+    "    perm_vector_table.append(perm_list)\n",
+    "    \n",
+    "with open(\"./benign/csv/benign_perm.csv\", 'w', newline='') as f:\n",
+    "    write = csv.writer(f)\n",
+    "    write.writerows(perm_vector_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "1e135e3b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-16T08:37:00.070819Z",
+     "start_time": "2023-01-16T08:36:59.832072Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "perm_vector_table = []\n",
+    "for file in os.listdir('./malware/permission/'):\n",
+    "    perm_list = [0]*474\n",
+    "    with open(f'./malware/permission/{file}', 'r') as f:\n",
+    "        apk=f.read().split('\\n')[1:-1]\n",
+    "    for line in apk:\n",
+    "        if \"'\" in line:\n",
+    "            perm = line.split(\"'\")[1]\n",
+    "        elif 'name=' in line:\n",
+    "            perm = line.split(\"name=\")[1]\n",
+    "        else:\n",
+    "            perm = line.split()[1]\n",
+    "    for perm in apk:\n",
+    "        if perm in perm_474:\n",
+    "            perm_list[perm_dict[perm]]=1\n",
+    "    perm_vector_table.append(perm_list)\n",
+    "    \n",
+    "with open(\"./malware/csv/malware_perm.csv\", 'w', newline='') as f:\n",
+    "    write = csv.writer(f)\n",
+    "    write.writerows(perm_vector_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b99f417b",
+   "metadata": {},
+   "source": [
+    "api"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b159ddb4",
-   "metadata": {},
+   "id": "8b9177c4",
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-01-16T08:52:17.400Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  4%|▍         | 39/1000 [00:40<28:15,  1.76s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "api_vector_table = []\n",
+    "for file in tqdm(os.listdir('./benign/api/')):\n",
+    "    api_list = [0]*1848\n",
+    "    with open(f'./benign/api/{file}', 'r') as f:\n",
+    "        apk=f.read().split('\\n')[1:-1]\n",
+    "    for api in apk:\n",
+    "        if api in api_1848:\n",
+    "            api_list[api_dict[api]]=1\n",
+    "    api_vector_table.append(api_list)\n",
+    "    \n",
+    "with open(\"./benign/csv/benign_api.csv\", 'w', newline='') as f:\n",
+    "    write = csv.writer(f)\n",
+    "    write.writerows(api_vector_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85bd315f",
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-01-16T08:52:28.944Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "sum(api_vector_table[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6574c4b",
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-01-16T08:52:24.366Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "api_vector_table = []\n",
+    "for file in tqdm(os.listdir('./malware/api/')):\n",
+    "    api_list = [0]*1848\n",
+    "    with open(f'./malware/api/{file}', 'r') as f:\n",
+    "        apk=f.read().split('\\n')[1:-1]\n",
+    "    for api in apk:\n",
+    "        if api in api_1848:\n",
+    "            api_list[api_dict[api]]=1\n",
+    "    api_vector_table.append(api_list)\n",
+    "    \n",
+    "with open(\"./malware/csv/malware_api.csv\", 'w', newline='') as f:\n",
+    "    write = csv.writer(f)\n",
+    "    write.writerows(api_vector_table)"
+   ]
   }
  ],
  "metadata": {
