--- a/5.머신러닝 기본프로젝트/4. 모델 생성 및 결과분석.ipynb
+++ b/5.머신러닝 기본프로젝트/4. 모델 생성 및 결과분석.ipynb
@@ -1,9 +1,52 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4e5102d1",
+   "metadata": {},
+   "source": [
+    "# 개요"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9815b0cd",
+   "metadata": {},
+   "source": [
+    "* 벡터테이블을 사용하여 머신러닝 모델에 학습시킬 데이터를 완성한다\n",
+    "* 학습데이터를 바탕으로 성능을 측정한다\n",
+    "* accuracy, feature importance, confusion matrix 등 실험에 대한 다양한 결과를 추출한다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e7a9ece",
+   "metadata": {},
+   "source": [
+    "# 코드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ea4527ac",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-16T09:03:34.604583Z",
+     "start_time": "2023-01-16T09:03:33.102999Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import pandas as pd"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "059b319a",
+   "id": "752b016e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -39,6 +82,35 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
